--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@capacitor-community/sqlite": "^3.5.0",
     "@capacitor/android": "^3.4.3",
     "@capacitor/core": "^3.4.3",
     "@ionic/angular": "^6.0.0",
@@ -38,6 +39,7 @@
     "@angular/language-service": "~13.2.2",
     "@capacitor/cli": "^3.4.3",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/lab": "3.2.12",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
