Build the register section. Validation,Register,Sign up, and Log in

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "com.example.app",
+	"appId": "com.farmer-information-app-for-agriculture-in-tabon.app",
 	"appName": "farmer-information-app-for-agriculture",
 	"webDir": "www",
 	"bundledWebRuntime": false
