--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,9 @@
 {
-	"appId": "com.farmer-information-app-for-agriculture-in-tabon.app",
+	"appId": "com.farmerInformationAppForAgricultureInTabon.app",
 	"appName": "farmer-information-app-for-agriculture",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://192.168.1.71:8100"
+	}
 }
