--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@capacitor-community/sqlite": "^3.5.0",
-    "@capacitor/android": "^3.4.3",
-    "@capacitor/core": "^3.4.3",
+    "@capacitor/android": "^3.7.0",
+    "@capacitor/core": "^3.7.0",
     "@ionic/angular": "^6.0.0",
+    "jetifier": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.3",
+    "@angular-devkit/build-angular": "^13.3.9",
     "@angular-eslint/builder": "~13.0.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
@@ -37,7 +38,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
-    "@capacitor/cli": "^3.4.3",
+    "@capacitor/cli": "^4.1.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.12",
     "@types/jasmine": "~3.6.0",
