--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,8 +2,5 @@
 	"appId": "com.farmerInformationAppForAgricultureInTabon.app",
 	"appName": "farmer-information-app-for-agriculture",
 	"webDir": "www",
-	"bundledWebRuntime": false,
-	"server": {
-		"url": "http://192.168.43.174:8100"
-	}
+	"bundledWebRuntime": false
 }
