--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,8 @@
 	"appId": "com.farmerInformationAppForAgricultureInTabon.app",
 	"appName": "farmer-information-app-for-agriculture",
 	"webDir": "www",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://192.168.100.167:8100"
+	}
 }
