--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
   "dependencies": {
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@capacitor-community/sqlite": "^3.5.0",
     "@capacitor/android": "^3.7.0",
-    "@capacitor/core": "^3.7.0",
+    "@capacitor/camera": "^4.1.2",
+    "@capacitor/core": "^3.8.0",
     "@ionic/angular": "^6.0.0",
+    "firebase": "^9.12.1",
     "jetifier": "^2.0.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
@@ -39,7 +41,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
-    "@capacitor/cli": "^4.1.0",
+    "@capacitor/cli": "^4.3.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@ionic/lab": "3.2.12",
     "@types/jasmine": "~3.6.0",
@@ -61,6 +63,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
+    "tslib": "^2.4.0",
     "typescript": "~4.4.4"
   },
   "description": "An Ionic project"
